--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -52,8 +52,9 @@
                 "tabs": {
                     "maps": {
                         "actions": {
-                            "add-maps": {
-                                "text": "Añadir"
+                            "drop-down": {
+                                "browse-maps": "Explorar mapas",
+                                "import-maps": "Importar mapas"
                             },
                             "link-maps": {
                                 "tooltips": {
@@ -69,6 +70,17 @@
                         "drop-zone": {
                             "text": "Importar tus mapas",
                             "subtext": "Suelta tus archivos zip aquí para importar tus mapas"
+                        }
+                    },
+                    "playlists": {
+                        "drop-down": {
+                            "browse-playlists": "Explorar listas de reproducción",
+                            "create-a-playlist": "Crear una lista de reproducción",
+                            "import-playlists": "Importar listas de reproducción"
+                        },
+                        "drop-zone": {
+                            "text": "Importa tus listas de reproducción",
+                            "subtext": "Suelta tus archivos \".bplist\" o \".json\" aquí para importarlos"
                         }
                     }
                 }
@@ -254,11 +266,13 @@
             "errors": {
                 "titles": {
                     "operation-running": "Operación en curso",
-                    "no-internet": "Sin internet"
+                    "no-internet": "Sin internet",
+                    "file-not-supported": "Archivo no compatible"
                 },
                 "msg": {
                     "operation-running": "Espera a que termine la operación actual y vuelve a empezar.",
-                    "no-internet": "Comprueba tu conexión a Internet e inténtalo de nuevo."
+                    "no-internet": "Comprueba tu conexión a Internet e inténtalo de nuevo.",
+                    "file-not-supported": "Solo se admiten archivos {types}."
                 }
             }
         },
@@ -519,7 +533,8 @@
                     "success": "Los mapas se han importado con éxito.",
                     "some-success": "Algunos mapas se han importado con éxito.",
                     "only-accept-zip": "Solo se admiten archivos zip.",
-                    "invalid-zip": "El o los archivos zip no contienen mapas."
+                    "invalid-zip": "El o los archivos zip no contienen mapas.",
+                    "unknown": "Se produjo un error desconocido."
                 }
             }
         },
@@ -1083,6 +1098,9 @@
             }
         }
     },
+    "drop-zone": {
+        "or-browse-files": "O navegar por los archivos"
+    },
     "playlist": {
         "error-playlist-creation-title": "Error al crear la lista de reproducción",
         "error-playlist-creation-desc": "Ocurrió un error al crear la lista de reproducción.",
@@ -1197,6 +1215,24 @@
             "last-week": "Última semana",
             "last-month": "Último mes",
             "3-last-month": "Últimos 3 meses"
+        },
+        "playlists-imported": "Listas de reproducción importadas",
+        "all-playlists-have-been-successfully-imported": "Todas las listas de reproducción se han importado con éxito",
+        "no-playlist-found": "No se encontró ninguna lista de reproducción",
+        "no-playlist-found-in-selected-files": "No se encontró ninguna lista de reproducción en los archivos seleccionados",
+        "some-playlists-not-imported": "Algunas listas de reproducción no se importaron",
+        "some-playlists-have-been-imported": {
+            "INVALID_SOURCE": "No se pudieron encontrar algunas listas de reproducción",
+            "INVALID_PLAYLIST_FILE": "Algunas listas de reproducción no son válidas",
+            "CANNOT_PARSE_PLAYLIST": "Algunas listas de reproducción no se pueden leer",
+            "unknown": "No se pudieron importar algunas listas de reproducción"
+        },
+        "no-playlists-imported": "No se importaron listas de reproducción",
+        "no-playlists-imported-errors": {
+            "INVALID_SOURCE": "No se pudieron encontrar las listas de reproducción",
+            "INVALID_PLAYLIST_FILE": "Las listas de reproducción no son válidas",
+            "CANNOT_PARSE_PLAYLIST": "Las listas de reproducción no se pueden leer",
+            "unknown": "No se pudo importar ninguna lista de reproducción"
         }
     },
     "dateformat": {
