Apply PR #619 (updated tags to the correct names)

--- a/assets/jsons/translations/en.json
+++ b/assets/jsons/translations/en.json
@@ -750,7 +750,7 @@
             "accuracy": "accuracy",
             "balanced": "balanced",
             "challenge": "challenge",
-            "dancestyle": "dance",
+            "dance-style": "dance",
             "fitness": "fitness",
             "speed": "speed",
             "tech": "tech"
@@ -759,10 +759,10 @@
             "dance": "dance",
             "swing": "swing",
             "nightcore": "nightcore",
-            "folk": "folk",
-            "family": "family",
+            "folk-acoustic": "folk & acoustic",
+            "kids-family": "kids & family",
             "ambient": "ambient",
-            "funk": "funk",
+            "funk-disco": "funk & disco",
             "jazz": "jazz",
             "soul": "soul",
             "speedcore": "speedcore",
@@ -770,24 +770,24 @@
             "rb": "r&b",
             "holiday": "holiday",
             "vocaloid": "vocaloid",
-            "jrock": "j-rock",
+            "j-rock": "j-rock",
             "trance": "trance",
-            "drumbass": "drum & bass",
-            "comedy": "comedy",
+            "drum-and-bass": "drum & bass",
+            "comedy-meme": "comedy & meme",
             "instrumental": "instrumental",
             "hardcore": "hardcore",
-            "kpop": "k-pop",
+            "k-pop": "k-pop",
             "indie": "indie",
             "techno": "techno",
             "house": "house",
-            "game": "video game",
-            "film": "film",
-            "alt": "alternative",
+            "video-game-soundtrack": "video game",
+            "tv-movie-soundtrack": "TV & film",
+            "alternative": "alternative",
             "dubstep": "dubstep",
             "metal": "metal",
             "anime": "anime",
-            "hiphop": "hiphop",
-            "jpop": "j-pop",
+            "hip-hop-rap": "hip hop & rap",
+            "j-pop": "j-pop",
             "rock": "rock",
             "pop": "pop",
             "electronic": "electronic",
