--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -759,39 +759,39 @@
             "dance": "ダンス",
             "swing": "スウィング",
             "nightcore": "ナイトコア",
-            "folk": "フォーク",
-            "family": "ファミリー",
+            "folk-acoustic": "フォーク & アコースティック",
+            "kids-family": "キッズ & ファミリー",
             "ambient": "アンビエント",
-            "funk": "ファンク",
+            "funk-disco": "ファンク & ディスコ",
             "jazz": "ジャズ",
             "soul": "ソウル",
-            "speedcore": "スピードコア ",
+            "speedcore": "スピードコア",
             "punk": "パンク",
             "rb": "r&b",
-            "holiday": "休日",
+            "holiday": "ホリデー",
             "vocaloid": "ボーカロイド",
-            "jrock": "j-rock",
+            "j-rock": "J-ロック",
             "trance": "トランス",
-            "drumbass": "ドラムンベース",
-            "comedy": "コメディ",
-            "instrumental": "器楽",
+            "drum-and-bass": "ドラム & ベース",
+            "comedy-meme": "コメディ & ミーム",
+            "instrumental": "インストゥルメンタル",
             "hardcore": "ハードコア",
-            "kpop": "k-pop",
+            "k-pop": "k-pop",
             "indie": "インディー",
             "techno": "テクノ",
-            "house": "家",
-            "game": "ビデオゲーム",
-            "film": "映画音楽",
-            "alt": "オルタナティヴ",
+            "house": "ハウス",
+            "video-game-soundtrack": "ゲーム音楽",
+            "tv-movie-soundtrack": "TV & 映画",
+            "alternative": "オルタナティブ",
             "dubstep": "ダブステップ",
             "metal": "メタル",
             "anime": "アニメ",
-            "hiphop": "ヒップポップ",
-            "jpop": "j-pop",
+            "hip-hop-rap": "ヒップホップ & ラップ",
+            "j-pop": "J-ポップ",
             "rock": "ロック",
             "pop": "ポップ",
             "electronic": "エレクトロニック",
-            "classical-orchestral": "Classical & Orchestral"
+            "classical-orchestral": "クラシック & オーケストラ"
         },
         "map-specificities": {
             "automapper": "AI",
