--- a/assets/jsons/translations/zh.json
+++ b/assets/jsons/translations/zh.json
@@ -750,48 +750,48 @@
             "accuracy": "精确度",
             "balanced": "平衡",
             "challenge": "挑战",
-            "dancestyle": "舞蹈",
+            "dance-style": "舞蹈",
             "fitness": "健身",
             "speed": "速度",
             "tech": "技术"
         },
         "map-styles": {
-            "dance": "dance",
-            "swing": "swing",
-            "nightcore": "nightcore",
-            "folk": "folk",
-            "family": "family",
-            "ambient": "ambient",
-            "funk": "funk",
-            "jazz": "jazz",
-            "soul": "soul",
-            "speedcore": "speedcore",
-            "punk": "punk",
+            "dance": "舞蹈",
+            "swing": "摇摆",
+            "nightcore": "夜核",
+            "folk-acoustic": "民谣 & 原声",
+            "kids-family": "儿童 & 家庭",
+            "ambient": "氛围音乐",
+            "funk-disco": "放克 & 迪斯科",
+            "jazz": "爵士",
+            "soul": "灵魂",
+            "speedcore": "极速核",
+            "punk": "朋克",
             "rb": "r&b",
-            "holiday": "holiday",
-            "vocaloid": "vocaloid",
-            "jrock": "j-rock",
-            "trance": "trance",
-            "drumbass": "drum & bass",
-            "comedy": "comedy",
-            "instrumental": "instrumental",
-            "hardcore": "hardcore",
-            "kpop": "k-pop",
-            "indie": "indie",
-            "techno": "techno",
-            "house": "house",
-            "game": "video game",
-            "film": "film",
-            "alt": "alternative",
-            "dubstep": "dubstep",
-            "metal": "metal",
-            "anime": "anime",
-            "hiphop": "hiphop",
-            "jpop": "j-pop",
-            "rock": "rock",
-            "pop": "pop",
-            "electronic": "electronic",
-            "classical-orchestral": "Classical & Orchestral"
+            "holiday": "假日",
+            "vocaloid": "声库",
+            "j-rock": "日式摇滚",
+            "trance": "迷幻",
+            "drum-and-bass": "鼓 & 贝斯",
+            "comedy-meme": "喜剧 & 表情包",
+            "instrumental": "纯音乐",
+            "hardcore": "硬核",
+            "k-pop": "k-pop",
+            "indie": "独立",
+            "techno": "电子舞曲",
+            "house": "浩室音乐",
+            "video-game-soundtrack": "游戏音乐",
+            "tv-movie-soundtrack": "电视 & 电影",
+            "alternative": "另类",
+            "dubstep": "电音鼓",
+            "metal": "金属",
+            "anime": "动漫",
+            "hip-hop-rap": "嘻哈 & 说唱",
+            "j-pop": "日式流行",
+            "rock": "摇滚",
+            "pop": "流行",
+            "electronic": "电子",
+            "classical-orchestral": "古典 & 管弦乐"
         },
         "map-specificities": {
             "automapper": "AI",
