--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -750,48 +750,48 @@
             "accuracy": "Präzision",
             "balanced": "Ausgeglichen",
             "challenge": "Herausforderung",
-            "dancestyle": "Tanz",
+            "dance-style": "Tanz",
             "fitness": "Fitness",
             "speed": "Geschwindigkeit",
             "tech": "Tech"
         },
         "map-styles": {
-            "dance": "Tanz",
-            "swing": "Swing",
-            "nightcore": "Nightcore",
-            "folk": "Folk",
-            "family": "Familie",
-            "ambient": "umgebung",
-            "funk": "Funk",
-            "jazz": "Jazz",
-            "soul": "Soul",
-            "speedcore": "Speedcore",
-            "punk": "Punk",
-            "rb": "R&B",
-            "holiday": "Urlaub",
-            "vocaloid": "Vokaloid",
-            "jrock": "J-Rock",
-            "trance": "Trance",
-            "drumbass": "Basstrommel",
-            "comedy": "Komödie",
-            "instrumental": "Instrumental",
-            "hardcore": "Hardcore",
-            "kpop": "K-Pop",
-            "indie": "Indie",
-            "techno": "Techno",
-            "house": "House",
-            "game": "Videospiele",
-            "film": "Filme",
-            "alt": "Alternativ",
-            "dubstep": "Dubstep",
-            "metal": "Metal",
-            "anime": "Anime",
-            "hiphop": "HipHop",
-            "jpop": "J-Pop",
-            "rock": "Rock",
-            "pop": "Pop",
-            "electronic": "Elektronisch",
-            "classical-orchestral": "Klassisch & Orchestra"
+            "dance": "tanz",
+            "swing": "swing",
+            "nightcore": "nightcore",
+            "folk-acoustic": "folk & akustisch",
+            "kids-family": "kinder & familie",
+            "ambient": "ambient",
+            "funk-disco": "funk & disco",
+            "jazz": "jazz",
+            "soul": "soul",
+            "speedcore": "speedcore",
+            "punk": "punk",
+            "rb": "r&b",
+            "holiday": "urlaub",
+            "vocaloid": "vocaloid",
+            "j-rock": "j-rock",
+            "trance": "trance",
+            "drum-and-bass": "drum & bass",
+            "comedy-meme": "komödie & meme",
+            "instrumental": "instrumental",
+            "hardcore": "hardcore",
+            "k-pop": "k-pop",
+            "indie": "indie",
+            "techno": "techno",
+            "house": "house",
+            "video-game-soundtrack": "videospiel",
+            "tv-movie-soundtrack": "TV & film",
+            "alternative": "alternativ",
+            "dubstep": "dubstep",
+            "metal": "metal",
+            "anime": "anime",
+            "hip-hop-rap": "hip hop & rap",
+            "j-pop": "j-pop",
+            "rock": "rock",
+            "pop": "pop",
+            "electronic": "elektronisch",
+            "classical-orchestral": "Klassisch & Orchestral"
         },
         "map-specificities": {
             "automapper": "KI",
