--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -750,19 +750,19 @@
             "accuracy": "precisión",
             "balanced": "equilibrado",
             "challenge": "desafío",
-            "dancestyle": "baile",
+            "dance-style": "baile",
             "fitness": "fitness",
             "speed": "speed",
             "tech": "tech"
         },
         "map-styles": {
-            "dance": "baile",
+            "dance": "danza",
             "swing": "swing",
             "nightcore": "nightcore",
-            "folk": "folk",
-            "family": "familia",
-            "ambient": "ambiente",
-            "funk": "funk",
+            "folk-acoustic": "folk & acústico",
+            "kids-family": "niños & familia",
+            "ambient": "ambiental",
+            "funk-disco": "funk & disco",
             "jazz": "jazz",
             "soul": "soul",
             "speedcore": "speedcore",
@@ -770,28 +770,28 @@
             "rb": "r&b",
             "holiday": "vacaciones",
             "vocaloid": "vocaloid",
-            "jrock": "j-rock",
+            "j-rock": "j-rock",
             "trance": "trance",
-            "drumbass": "drum & bass",
-            "comedy": "comedia",
+            "drum-and-bass": "drum & bass",
+            "comedy-meme": "comedia & meme",
             "instrumental": "instrumental",
             "hardcore": "hardcore",
-            "kpop": "k-pop",
+            "k-pop": "k-pop",
             "indie": "indie",
-            "techno": "tecno",
+            "techno": "techno",
             "house": "house",
-            "game": "videojuego",
-            "film": "film",
-            "alt": "alternativa",
+            "video-game-soundtrack": "videojuego",
+            "tv-movie-soundtrack": "TV & cine",
+            "alternative": "alternativo",
             "dubstep": "dubstep",
             "metal": "metal",
             "anime": "anime",
-            "hiphop": "hiphop",
-            "jpop": "j-pop",
+            "hip-hop-rap": "hip hop & rap",
+            "j-pop": "j-pop",
             "rock": "rock",
             "pop": "pop",
-            "electronic": "electrónico",
-            "classical-orchestral": "Clásico y orquestal"
+            "electronic": "electrónica",
+            "classical-orchestral": "Clásica & Orquestal"
         },
         "map-specificities": {
             "automapper": "IA",
